[tool.poetry]
name = "rl_maze"
version = "0.1.0"
description = "Maze navigation using reinforcement learning"
authors = ["danielvogler <davogler@ethz.ch>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.22.4"
matplotlib = "^3.5.2"
tensorflow = "^2.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
